feat: ✨ Update index.html to link local Normalize.css for improved styling consistency and remove unnecessary CDN references

--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -6,15 +6,12 @@
     <title>Simple Omelette Recipe</title>
     <link rel="icon" href="/recipe-page-main/assets/images/favicon-32x32.png" type="image/x-icon">
     <meta name="description" content="An easy and quick recipe for a delicious omelette.">
-
     <!-- Google Fonts Import (Young Serif and Outfit) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&family=Young+Serif&display=swap" rel="stylesheet">
-
     <!-- Normalize.css -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-
+    <link rel="stylesheet" href="/recipe-page-main/assets/css/normalize.css">
     <!-- CSS Styles -->
     <link rel="stylesheet" href="/recipe-page-main/assets/css/styles.css">
 </head>
