--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Omelette Recipe</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Simple Omelette Recipe</title>    
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <article class="recipe container">
         <header class="recipe__header">
-            <img src="./assets/images/image-omelette.jpeg" alt="Delicious Omelette" class="recipe__image">
+            <img src="../assets/images/image-omelette.jpeg" alt="Delicious Omelette" class="recipe__image">
             <h1 class="recipe__title">Simple Omelette Recipe</h1>
             <p class="recipe__description">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
         </header>
