--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Omelette Recipe</title>    
-    <link rel="stylesheet" href="../css/style.css">
+    <title>Simple Omelette Recipe</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <article class="recipe container">
-        <header class="recipe__header">
-            <img src="../assets/images/image-omelette.jpeg" alt="Delicious Omelette" class="recipe__image">
-            <h1 class="recipe__title">Simple Omelette Recipe</h1>
-            <p class="recipe__description">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+    <article>
+        <header>
+            <img src="./assets/images/image-omelette.jpeg" alt="Delicious Omelette">
+            <h1>Simple Omelette Recipe</h1>
+            <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
         </header>
 
-        <section class="recipe__prep-time">
-            <h2>Preparation time</h2>
+        <section aria-labelledby="preparation-time">
+            <h2 id="preparation-time">Preparation time</h2>
             <ul>
                 <li><strong>Total:</strong> Approximately 10 minutes</li>
                 <li><strong>Preparation:</strong> 5 minutes</li>
@@ -23,8 +23,8 @@
             </ul>
         </section>
 
-        <section class="recipe__ingredients">
-            <h2>Ingredients</h2>
+        <section aria-labelledby="ingredients">
+            <h2 id="ingredients">Ingredients</h2>
             <ul>
                 <li>2-3 large eggs</li>
                 <li>Salt, to taste</li>
@@ -34,35 +34,49 @@
             </ul>
         </section>
 
-        <section class="recipe__instructions">
-            <h2>Instructions</h2>
+        <section aria-labelledby="instructions">
+            <h2 id="instructions">Instructions</h2>
             <ol>
-                <li><strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</li>
-                <li><strong>Heat the pan:</strong> Place a non-stick frying pan over medium heat and add butter or oil.</li>
-                <li><strong>Cook the omelette:</strong> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.</li>
-                <li><strong>Add fillings (optional):</strong> When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.</li>
-                <li><strong>Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.</li>
-                <li><strong>Enjoy:</strong> Serve hot, with additional salt and pepper if needed.</li>
+                <li>
+                    <strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.
+                </li>
+                <li>
+                    <strong>Heat the pan:</strong> Place a non-stick frying pan over medium heat and add butter or oil.
+                </li>
+                <li>
+                    <strong>Cook the omelette:</strong> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.
+                </li>
+                <li>
+                    <strong>Add fillings (optional):</strong> When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.
+                </li>
+                <li>
+                    <strong>Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.
+                </li>
+                <li>
+                    <strong>Enjoy:</strong> Serve hot, with additional salt and pepper if needed.
+                </li>
             </ol>
         </section>
 
-        <section class="recipe__nutrition">
-            <h2>Nutrition</h2>
+        <section aria-labelledby="nutrition">
+            <h2 id="nutrition">Nutrition</h2>
+            <p>The table below shows nutritional values per serving without the additional fillings.</p>
             <table>
-              <caption>The table below shows nutritional values per serving without the additional fillings.</caption>
-                <thead>
-                    <tr>
-                        <th scope="col">Calories</th>
-                        <th scope="col">Carbs</th>
-                        <th scope="col">Protein</th>
-                        <th scope="col">Fat</th>
-                    </tr>
-                </thead>
                 <tbody>
                     <tr>
+                        <td>Calories</td>
                         <td>277kcal</td>
+                    </tr>
+                    <tr>
+                        <td>Carbs</td>
                         <td>0g</td>
+                    </tr>
+                    <tr>
+                        <td>Protein</td>
                         <td>20g</td>
+                    </tr>
+                    <tr>
+                        <td>Fat</td>
                         <td>22g</td>
                     </tr>
                 </tbody>
