--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -4,80 +4,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Omelette Recipe</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    <article>
-        <header>
-            <img src="./assets/images/image-omelette.jpeg" alt="Delicious Omelette">
-            <h1>Simple Omelette Recipe</h1>
-            <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+    <article class="recipe">
+        <header class="recipe__header">
+            <img class="recipe__image" src="./assets/images/image-omelette.jpeg" alt="Delicious Omelette">
+            <h1 class="recipe__title">Simple Omelette Recipe</h1>
+            <p class="recipe__description">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
         </header>
 
-        <section aria-labelledby="preparation-time">
-            <h2 id="preparation-time">Preparation time</h2>
-            <ul>
-                <li><strong>Total:</strong> Approximately 10 minutes</li>
-                <li><strong>Preparation:</strong> 5 minutes</li>
-                <li><strong>Cooking:</strong> 5 minutes</li>
+        <section class="recipe__section" aria-labelledby="preparation-time">
+            <h2 id="preparation-time" class="recipe__section-title">Preparation time</h2>
+            <ul class="recipe__list">
+                <li class="recipe__list-item"><strong>Total:</strong> Approximately 10 minutes</li>
+                <li class="recipe__list-item"><strong>Preparation:</strong> 5 minutes</li>
+                <li class="recipe__list-item"><strong>Cooking:</strong> 5 minutes</li>
             </ul>
         </section>
 
-        <section aria-labelledby="ingredients">
-            <h2 id="ingredients">Ingredients</h2>
-            <ul>
-                <li>2-3 large eggs</li>
-                <li>Salt, to taste</li>
-                <li>Pepper, to taste</li>
-                <li>1 tablespoon of butter or oil</li>
-                <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+        <section class="recipe__section" aria-labelledby="ingredients">
+            <h2 id="ingredients" class="recipe__section-title">Ingredients</h2>
+            <ul class="recipe__list">
+                <li class="recipe__list-item">2-3 large eggs</li>
+                <li class="recipe__list-item">Salt, to taste</li>
+                <li class="recipe__list-item">Pepper, to taste</li>
+                <li class="recipe__list-item">1 tablespoon of butter or oil</li>
+                <li class="recipe__list-item">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
             </ul>
         </section>
 
-        <section aria-labelledby="instructions">
-            <h2 id="instructions">Instructions</h2>
-            <ol>
-                <li>
+        <section class="recipe__section" aria-labelledby="instructions">
+            <h2 id="instructions" class="recipe__section-title">Instructions</h2>
+            <ol class="recipe__list">
+                <li class="recipe__list-item">
                     <strong>Beat the eggs:</strong> In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.
                 </li>
-                <li>
+                <li class="recipe__list-item">
                     <strong>Heat the pan:</strong> Place a non-stick frying pan over medium heat and add butter or oil.
                 </li>
-                <li>
+                <li class="recipe__list-item">
                     <strong>Cook the omelette:</strong> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly coat the surface.
                 </li>
-                <li>
+                <li class="recipe__list-item">
                     <strong>Add fillings (optional):</strong> When the eggs begin to set at the edges but are still slightly runny in the middle, sprinkle your chosen fillings over one half of the omelette.
                 </li>
-                <li>
+                <li class="recipe__list-item">
                     <strong>Fold and serve:</strong> As the omelette continues to cook, carefully lift one edge and fold it over the fillings. Let it cook for another minute, then slide it onto a plate.
                 </li>
-                <li>
+                <li class="recipe__list-item">
                     <strong>Enjoy:</strong> Serve hot, with additional salt and pepper if needed.
                 </li>
             </ol>
         </section>
 
-        <section aria-labelledby="nutrition">
-            <h2 id="nutrition">Nutrition</h2>
-            <p>The table below shows nutritional values per serving without the additional fillings.</p>
-            <table>
+        <section class="recipe__section" aria-labelledby="nutrition">
+            <h2 id="nutrition" class="recipe__section-title">Nutrition</h2>
+            <p class="recipe__text">The table below shows nutritional values per serving without the additional fillings.</p>
+            <table class="recipe__table">
                 <tbody>
-                    <tr>
-                        <td>Calories</td>
-                        <td>277kcal</td>
+                    <tr class="recipe__table-row">
+                        <td class="recipe__table-cell">Calories</td>
+                        <td class="recipe__table-cell">277kcal</td>
                     </tr>
-                    <tr>
-                        <td>Carbs</td>
-                        <td>0g</td>
+                    <tr class="recipe__table-row">
+                        <td class="recipe__table-cell">Carbs</td>
+                        <td class="recipe__table-cell">0g</td>
                     </tr>
-                    <tr>
-                        <td>Protein</td>
-                        <td>20g</td>
+                    <tr class="recipe__table-row">
+                        <td class="recipe__table-cell">Protein</td>
+                        <td class="recipe__table-cell">20g</td>
                     </tr>
-                    <tr>
-                        <td>Fat</td>
-                        <td>22g</td>
+                    <tr class="recipe__table-row">
+                        <td class="recipe__table-cell">Fat</td>
+                        <td class="recipe__table-cell">22g</td>
                     </tr>
                 </tbody>
             </table>
