--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <main>
+        <figure>
+            <img src="/assets/images/image-omelette.jpeg" alt="A delicious omelette">             
+        </figure>
         <article> 
-            <section class="recipe-intro">
-                <img src="/assets/images/image-omelette.jpeg" alt="A delicious omelette"> 
+            <section class="recipe-intro">                
                 <h1>Simple Omelette Recipe</h1>
                 <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
             </section>
@@ -24,7 +26,7 @@
                     <li><strong>Cooking:</strong> 5 minutes</li>
                 </ul>
             </section>
-
+            
             <section class="ingredients">
                 <h2>Ingredients</h2>
                 <ul>
