feat: ✨ Refactor HTML structure and CSS classes for improved semantics and styling consistency; enhance layout and typography for better readability

--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="style.css">    
 </head>
 <body>
-    <main class="recipe">
-        <article class="recipe__content">
+    <main class="container">
+        <article class="card__recipe">
             <figure>
                 <img src="/assets/images/image-omelette.jpeg" alt="A simple and delicious omelette" class="recipe__image"> 
             </figure>            
