feat: ✨ Refactor recipe page layout and styles for improved structure and responsiveness; enhance readability and maintainability

--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -14,17 +14,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="recipe__header">
-      </header>
-    <main class="recipe">
-        <article class="recipe__card">
+    <main>
+              
             <picture>                
                 <img src="/assets/images/image-omelette.jpeg" alt="Simple Omelette with spinach, onions, and dill on a white plate" class="recipe__image">
             </picture>
-            
-            <h1 class="recipe__title">Simple Omelette Recipe</h1>
-            <p class="recipe__description">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
-
+        <article class="recipe__card">
+            <section class="recipe__intro">
+                <h1>Simple Omelette Recipe</h1>
+                <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
+            </section>
             <section class="recipe__prep-time">
                 <h2 class="recipe__section-title">Preparation time</h2>
                 <ul class="recipe__prep-time-list">
@@ -39,7 +38,6 @@
                     </li>
                 </ul>
             </section>
-
             <section class="recipe__ingredients">
                 <h2 class="recipe__section-title">Ingredients</h2>
                 <ul class="recipe__ingredients-list">
@@ -50,7 +48,6 @@
                     <li class="recipe__ingredients-item">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
                 </ul>
             </section>
-
             <hr class="recipe__divider">
 
             <section class="recipe__instructions">
@@ -110,8 +107,6 @@
                 </table>
             </section>
         </article>
-    </main>
-    <footer class="recipe__footer">
-    </footer>
+    </main>    
 </body>
 </html>
