feat: ✨ Enhance recipe page layout and styles; update spacing variables and improve structure for better visual consistency

--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -14,11 +14,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
-              
-            <picture>                
-                <img src="/assets/images/image-omelette.jpeg" alt="Simple Omelette with spinach, onions, and dill on a white plate" class="recipe__image">
-            </picture>
+    <main class="recipe">              
+        <picture>                
+            <img src="/assets/images/image-omelette.jpeg" alt="Simple Omelette with spinach, onions, and dill on a white plate" class="recipe__image">
+        </picture>
         <article class="recipe__card">
             <section class="recipe__intro">
                 <h1>Simple Omelette Recipe</h1>
