feat: ✨ Improve recipe page structure and styles; add preconnect links for fonts and enhance image container for better layout

--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -12,11 +12,14 @@
     <link rel="stylesheet" href="normalize.css">
     <link rel="icon" href="/assets/images/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main class="recipe">              
-        <picture>                
-            <img src="/assets/images/image-omelette.jpeg" alt="Simple Omelette with spinach, onions, and dill on a white plate" class="recipe__image">
+    <main class="recipe">        
+        <picture>                           
+            <img src="/assets/images/image-omelette.jpeg" alt="Simple Omelette with fresh ingredients" class="recipe__image">
         </picture>
         <article class="recipe__card">
             <section class="recipe__intro">
@@ -106,6 +109,6 @@
                 </table>
             </section>
         </article>
-    </main>    
+    </main>      
 </body>
 </html>
