feat: ✨ Add styling for recipe introduction and preparation time sections; enhance layout and readability

--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -27,15 +27,15 @@
                 <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
             </section>
             <section class="recipe__prep-time">
-                <h2 class="recipe__section-title">Preparation time</h2>
-                <ul class="recipe__prep-time-list">
-                    <li class="recipe__prep-time-item">
+                <h2>Preparation time</h2>
+                <ul>
+                    <li>
                         <strong>Total:</strong> Approximately 10 minutes
                     </li>
-                    <li class="recipe__prep-time-item">
+                    <li>
                         <strong>Preparation:</strong> 5 minutes
                     </li>
-                    <li class="recipe__prep-time-item">
+                    <li>
                         <strong>Cooking:</strong> 5 minutes
                     </li>
                 </ul>
