fix: 🐛 Correct image paths and update live site URL in README and HTML files for proper resource loading

--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -9,17 +9,16 @@
     <meta property="og:image" content="/assets/images/image-omelette.jpeg">
     <meta property="og:url" content="[URL of your recipe page]">
     <title>Simple Omelette Recipe</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="icon" href="/assets/images/favicon-32x32.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./normalize.css">
+    <link rel="icon" href="./assets/images/favicon-32x32.png" type="image/x-icon">
+    <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>    
 </head>
 <body>
     <main class="recipe">        
         <picture>                           
-            <img src="/assets/images/image-omelette.jpeg" alt="Simple Omelette with fresh ingredients" class="recipe__image">
+            <img src="./assets/images/image-omelette.jpeg" alt="Simple Omelette with fresh ingredients" class="recipe__image">
         </picture>
         <article class="recipe__card">
             <section class="recipe__intro">
