--- a/four-card-feature-section-master/index.html
+++ b/four-card-feature-section-master/index.html
@@ -1,45 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Four card feature section</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="AI-powered project delivery tools featuring team building, supervision, calculations, and quality assurance">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
+    <title>Reliable and Efficient Delivery - Powered by Technology</title>
 </head>
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
+    <main class="main-content">
+        <header class="hero">
+            <h1 class="hero__title">
+                <span class="hero__title--light">Reliable, efficient delivery</span>
+                Powered by Technology
+            </h1>
+            <p class="hero__description">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
+        </header>
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+        <section class="features" aria-labelledby="tools-heading">
+            <h2 id="tools-heading" class="visually-hidden">Our AI Tools</h2>
+            
+            <article class="feature-card feature-card--cyan">
+                <h3 class="feature-card__title">Supervisor</h3>
+                <p class="feature-card__description">Monitors activity to identify project roadblocks</p>
+                <img class="feature-card__icon" src="./images/icon-supervisor.svg" alt="" aria-hidden="true" width="64" height="64">
+            </article>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+            <article class="feature-card feature-card--red">
+                <h3 class="feature-card__title">Team Builder</h3>
+                <p class="feature-card__description">Scans our talent network to create the optimal team for your project</p>
+                <img class="feature-card__icon" src="./images/icon-team-builder.svg" alt="" aria-hidden="true" width="64" height="64">
+            </article>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+            <article class="feature-card feature-card--orange">
+                <h3 class="feature-card__title">Karma</h3>
+                <p class="feature-card__description">Regularly evaluates our talent to ensure quality</p>
+                <img class="feature-card__icon" src="./images/icon-karma.svg" alt="" aria-hidden="true" width="64" height="64">
+            </article>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+            <article class="feature-card feature-card--blue">
+                <h3 class="feature-card__title">Calculator</h3>
+                <p class="feature-card__description">Uses data from past projects to provide better delivery estimates</p>
+                <img class="feature-card__icon" src="./images/icon-calculator.svg" alt="" aria-hidden="true" width="64" height="64">
+            </article>
+        </section>
+    </main>
 </body>
 </html>
