style(tests): 🎨 update testimonial styles and layout for consistency

--- a/testimonials-grid-section-main/index.html
+++ b/testimonials-grid-section-main/index.html
@@ -15,9 +15,9 @@
 <body>
   <main id="main" class="main">
     <section class="testimonials">
-      <article class="testimonial testimonial--primary">
+      <article class="testimonial testimonial--primary testimonial--col-2">
         <div class="testimonial__header">
-          <img src="./images/image-daniel.jpg" alt="Daniel Clifford" class="testimonial__avatar">
+          <img src="./images/image-daniel.jpg" alt="Daniel Clifford" class="testimonial__avatar testimonial__avatar--bordered">
           <div class="testimonial__info">
             <h2 class="testimonial__name">Daniel Clifford</h2>
             <p class="testimonial__status">Verified Graduate</p>
@@ -26,9 +26,9 @@
         <p class="testimonial__highlight">I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny’s worth.</p>
         <p class="testimonial__quote">“ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”</p>
       </article>
-      <article class="testimonial testimonial--dark">
+      <article class="testimonial testimonial--secondary testimonial--col-1">
         <div class="testimonial__header">
-          <img src="./images/image-jonathan.jpg" alt="Jonathan Walters" class="testimonial__avatar">
+          <img src="./images/image-jonathan.jpg" alt="Jonathan Walters" class="testimonial__avatar testimonial__avatar--bordered">
           <div class="testimonial__info">
             <h2 class="testimonial__name">Jonathan Walters</h2>
             <p class="testimonial__status">Verified Graduate</p>
@@ -37,7 +37,7 @@
         <p class="testimonial__highlight">The team was very supportive and kept me motivated</p>
         <p class="testimonial__quote">“ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big company. This was one of the best investments I’ve made in myself. ”</p>
       </article>
-      <article class="testimonial">
+      <article class="testimonial testimonial--neutral testimonial--col-1">
         <div class="testimonial__header">
           <img src="./images/image-jeanette.jpg" alt="Jeanette Harmon" class="testimonial__avatar">
           <div class="testimonial__info">
@@ -48,9 +48,9 @@
         <p class="testimonial__highlight">An overall wonderful and rewarding experience</p>
         <p class="testimonial__quote">“ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living while doing something I love. ”</p>
       </article>
-      <article class="testimonial testimonial--darker">
+      <article class="testimonial testimonial--dark testimonial--col-2">
         <div class="testimonial__header">
-          <img src="./images/image-patrick.jpg" alt="Patrick Abrams" class="testimonial__avatar">
+          <img src="./images/image-patrick.jpg" alt="Patrick Abrams" class="testimonial__avatar testimonial__avatar--bordered">
           <div class="testimonial__info">
             <h2 class="testimonial__name">Patrick Abrams</h2>
             <p class="testimonial__status">Verified Graduate</p>
@@ -59,7 +59,7 @@
         <p class="testimonial__highlight">Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and learning from their experiences was easy.</p>
         <p class="testimonial__quote">“ The staff seem genuinely concerned about my progress which I find really refreshing. The program gave me the confidence necessary to be able to go out in the world and present myself as a capable junior developer. The standard is above the rest. You will get the personal attention you need from an incredible community of smart and amazing people. ”</p>
       </article>
-      <article class="testimonial testimonial--kira">
+      <article class="testimonial testimonial--neutral testimonial--sidebar">
         <div class="testimonial__header">
           <img src="./images/image-kira.jpg" alt="Kira Whittle" class="testimonial__avatar">
           <div class="testimonial__info">
