style(tests): 🎨 add visually hidden heading for accessibility

--- a/testimonials-grid-section-main/index.html
+++ b/testimonials-grid-section-main/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
   <main id="main" class="main">
+    <h1 class="visually-hidden">Testimonials Grid Section</h1>
     <section class="testimonials">
       <article class="testimonial testimonial--primary testimonial--col-2">
         <div class="testimonial__header">
