style(footer): 🎨 enhance footer layout for better responsiveness

--- a/meet-landing-page/index.html
+++ b/meet-landing-page/index.html
@@ -42,10 +42,12 @@
 
     <section class="footer">
       <h2>02</h2>
-      <h3>Experience more together</h3>
-      <p>Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
-      <div class="button-group">
-        <button>Download <span>v1.3</span></button>
+      <div class="footer__content">
+        <h3>Experience more together</h3>
+        <p>Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
+        <div class="button-group">
+          <button>Download <span>v1.3</span></button>
+        </div>
       </div>
     </section>
   </main>
