feat(landing-page): ✨ add logo and spacing utilities with styles

--- a/meet-landing-page/index.html
+++ b/meet-landing-page/index.html
@@ -71,24 +71,21 @@
                 <span class="section-separator__number">02</span>
             </div>
         </section>
-
-        <section class="cta">
-            <div class="cta__background">
-                <img src="./assets/desktop/image-footer.jpg" alt="" class="cta__image" width="1280" height="400">
-                <div class="cta__overlay"></div>
-            </div>
-            <div class="container">
-                <div class="cta__content">
-                    <h2 class="cta__title">Experience more together</h2>
-                    <p class="cta__description">Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
-                    <a href="#" class="button button--primary button--light">Download <span class="button__version">v1.3</span></a>
-                </div>
-            </div>
-        </section>
     </main>
     
     <footer class="footer">
+        <div class="footer__background">
+            <img src="./assets/desktop/image-footer.jpg" alt="" class="footer__image" width="1280" height="400">
+            <div class="footer__overlay"></div>
+        </div>
         <div class="container">
+            <div class="footer__grid">
+                <h2 class="footer__title">Experience more together</h2>
+                <p class="footer__description">Stay connected with reliable HD meetings and unlimited one-on-one and group video sessions.</p>
+                <div class="footer__cta">
+                    <a href="#" class="button button--primary button--light">Download <span class="button__version">v1.3</span></a>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
