style(footer): 🎨 add section separator to footer CTA

--- a/meet-landing-page/index.html
+++ b/meet-landing-page/index.html
@@ -68,13 +68,15 @@
                 </div>
             </div>            
         </section>
+        <section class="footer-cta">
+            <div class="section-separator">
+                <hr class="section-separator__line">
+                <span class="section-separator__number">02</span>
+            </div>
+        </section>
     </main>
-    
-    <footer class="footer">
-        <div class="section-separator">
-            <hr class="section-separator__line">
-            <span class="section-separator__number">02</span>
-        </div>
+   
+    <footer class="footer">        
         <div class="footer__background">
             <img src="./assets/desktop/image-footer.jpg" alt="" class="footer__image" width="1280" height="400">
             <div class="footer__overlay"></div>
